<resources>
    <string name="app_name">Handwritten Notes - IITJEE , NEET , Class 11 and 12</string>
    <string name="youtube_link"><a href="https://www.youtube.com/channel/UCBPMBxJR1e9VDjA1WUWTVgA">Youtube</a></string>
    <string name="telegram_link"><a href="https://t.me/edublogs4u">Telegram</a></string>
    <string name="instagram_link"><a href="https://www.instagram.com/____deepak___sharma____">Instagram</a></string>
    <string name="facebook_link"><a href="https://www.facebook.com/Rank-Booster-100253905152441">Facebook</a></string>
    <string name="website"><a href="https://www.jeerankbooster.com">Website</a></string>
</resources>
