<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayoutId"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBarId"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Notes!"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/noteTitleId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/noteDesId"
                    android:padding="5dp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:textSize="15sp"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/mathematicsId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:background="@color/black"
                    android:text="Class 11"/>

                <Button
                    android:id="@+id/physicsId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="#ffffff"
                    android:background="@color/black"
                    android:text="Class 12"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationMenuId"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bk"
                    android:scaleType="centerCrop"
                    android:id="@+id/profilePhotoId"/>

            </LinearLayout>

            <TextView
                android:id="@+id/youtubeId"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_ondemand_video_black_24dp"
                android:text="@string/youtube_link"/>

            <TextView
                android:id="@+id/telegramId"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/telegram"
                android:text="@string/telegram_link"/>

            <TextView
                android:id="@+id/instagramId"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/instagram"
                android:text="@string/instagram_link"/>


            <TextView
                android:id="@+id/facebookId"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/facebook_link"/>

            <TextView
                android:id="@+id/websiteId"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_web_black_24dp"
                android:text="@string/website"/>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="15dp"
                android:background="#D1D1D1" />

            <TextView
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/shareId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_share_black_24dp"
                android:text="Share App"/>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>